force-app/main/default/objects/Leave_Balance__c/Leave_Balance__c.object-meta.xml
<CustomObject>
    <description>Tracks available leave per employee and leave type.</description>
    <label>Leave Balance</label>
    <nameField>
        <label>Leave Balance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Leave Balances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>