force-app/main/default/objects/Leave_Balance__c/fields/Available__c.field-meta.xml
<CustomField>
    <fullName>Available__c</fullName>
    <description>Remaining leave balance.</description>
    <formula>Total_Allocation__c - Used__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>