force-app/main/default/objects/Leave_Balance__c/fields/Balance_Key__c.field-meta.xml
<CustomField>
    <fullName>Balance_Key__c</fullName>
    <description>Unique key in the format UserId-LeaveType.</description>
    <externalId>true</externalId>
    <label>Balance Key</label>
    <length>130</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>