force-app/main/default/objects/Leave_Balance__c/fields/Total_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Total_Allocation__c</fullName>
    <description>Total leave assigned for the period.</description>
    <label>Total Allocation</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>