force-app/main/default/objects/Leave_Balance__c/fields/Used__c.field-meta.xml
<CustomField>
    <fullName>Used__c</fullName>
    <description>Total leave consumed.</description>
    <label>Used</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>